--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,5 +1,5 @@
 .Body {
-    max-width: 1200px;
+    max-width: 1380px;
     width: 100%;
     margin: 40px auto;
     display: grid;
@@ -8,10 +8,60 @@
     gap: 12px;
 
     &Link {
-        text-decoration: none;
-        display: block;
-        border: 1px solid black;
-        color: black;
-        padding-block: 40px;
+        transition: all 0.3s ease;
+        border-radius: 12px;
+        &:hover {
+            background-color: #663399;
+        }
+
+        &:hover a {
+            color: #fff;
+        }
+
+        &:hover a h3 {
+            animation: bound 1.5s infinite ease;
+        }
+        &:hover a p {
+            transform: scale(1.1);
+        }
+
+        & a {
+            text-decoration: none;
+            display: block;
+            border: 1px solid #663399;
+            color: #663399;
+            padding: 40px 20px;
+            transition: all 0.3s ease;
+            border-radius: 12px;
+
+            & p {
+                transition: transform 0.3s ease;
+                margin-top: 8px;
+            }
+        }
+    }
+}
+
+.day-1-bg {
+    a {
+        color: #663399;
+    }
+}
+
+@keyframes bound {
+    0% {
+        transform: scale(1, 1) translateY(0);
+    }
+    10% {
+        transform: scale(1.1, 0.9) translateY(0);
+    }
+    30% {
+        transform: scale(0.9, 1.1) translateY(-20px);
+    }
+    50% {
+        transform: scale(1, 1) translateY(0);
+    }
+    100% {
+        transform: scale(1, 1) translateY(0);
     }
 }
