--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -6,6 +6,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     text-align: center;
     gap: 12px;
+    @media (max-width: 1200px) {
+        padding-inline: 24px;
+    }
 
     &Link {
         transition: all 0.3s ease;
@@ -19,10 +22,20 @@
         }
 
         &:hover a h3 {
+            font-size: 24px;
             animation: bound 1.5s infinite ease;
         }
         &:hover a p {
             transform: scale(1.1);
+        }
+
+        @media (max-width: 1200px) {
+            &:hover a h3 {
+                font-size: 22px;
+            }
+            &:hover a p {
+                transform: scale(1.05);
+            }
         }
 
         & a {
@@ -30,13 +43,35 @@
             display: block;
             border: 1px solid #663399;
             color: #663399;
-            padding: 40px 20px;
+            width: 100%;
+            min-height: 170px;
             transition: all 0.3s ease;
             border-radius: 12px;
+            padding: 40px 12px;
+
+            @media (max-width: 1200px) {
+                & {
+                    padding: 20px 8px;
+                    min-height: 130px;
+
+                    & h3 {
+                        font-size: 20px;
+                    }
+
+                    & p {
+                        font-size: 15px;
+                    }
+                }
+            }
+
+            & h3 {
+                font-size: 22px;
+            }
 
             & p {
                 transition: transform 0.3s ease;
                 margin-top: 8px;
+                font-size: 17px;
             }
         }
     }
