--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -3,7 +3,7 @@
     height: $height;
 }
 
-@mixin flex($justify, $align) {
+@mixin flex($justify: center, $align: center) {
     display: flex;
     justify-content: $justify;
     align-items: $align;
